<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelSelectActivity">

    <TextView
        android:id="@+id/LevelSelectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/GenreSelectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Genre_Text"
        app:layout_constraintBottom_toTopOf="@+id/LevelSelectText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LevelSelectText"
        app:layout_constraintVertical_bias="0.944" />

    <Spinner
        android:id="@+id/Genre_spinner"
        android:layout_width="190dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/GenreSelectText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <Spinner
        android:id="@+id/Level_spinner"
        android:layout_width="190dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toEndOf="@+id/LevelSelectText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/gameStart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startgame_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Level_spinner"
        app:layout_constraintVertical_bias="0.267" />

</androidx.constraintlayout.widget.ConstraintLayout>